# desafio_C2S

./: .gitignore  README.md  load_fixtures.py  mcp_client_groq.py  mcp_server.py  pyproject.toml  run_mcp.sh  run_mcp_server_dev.sh
src/data/: database.py
src/models/: car.py
src/schemas/: car.py
src/services/: car.py
tests/: conftest.py
tests/car/: test_cars.py
tests/factories/: car.py
